# formation_controller

./: CMakeLists.txt
config/: formation_shape.yaml  mqtt_params.yaml  overall_params.yaml  pid_params.yaml
include/formation_controller/: gps_heading_to_tf.hpp
launch/: agent_bringup.launch.py  agent_bringup_real.launch.py  agent_bringup_sim.launch.py  follower_bringup.launch.py  pid_servers.launch.py  sam_follower_bringup.launch.py
src/: formation_shape_broadcaster.cpp  get_differential_value.cpp  gps_heading_to_tf.cpp  origin_pub.cpp  pid.cpp  pid_server.cpp  sum_and_scale.cpp  tf_repub.cpp  tf_to_path.cpp
tmp/: agent.launch.py  agent0.launch.py  agent_bringup_opaque_func.launch.py  leaders_motion.xml  overall_params.yaml  setup.launch.py  vehicle_agnostic_nodes.launch.py
